@@ -1,3 +1,7 @@
+09/12/2003 Bob Rossi <bob@brasko.net>
+
+    * NEWS: Fixed crash for when TGDB would try to parse watchpoints.
+
 09/10/2003 Bob Rossi <bob@brasko.net>
 
     * NEWS: Add new feature. showtgdbcommands.
